--- a/defense-p5-conclusion.tex
+++ b/defense-p5-conclusion.tex
@@ -1,10 +1,17 @@
 \begin{frame}
-   \frametitle{Conclusion}
+   \frametitle{Summary of Contributions}
 
-   Future work?
+   \begin{itemize}
+   \item LazySP algorithm for graphs with expensive edge evaluations
+   \item IBiD algorithm for incremental bidirectional search
+   \item LEMUR algorithm for motion planning with utility functions
+   \item C-space family decomposition for multi-step planning tasks
+   \end{itemize}
 
-   Discussion!
+   %Future work?
 
-   Roadmap stacks!
+   %Discussion!
+
+   %Roadmap stacks!
    
 \end{frame}
